--- a/source/catalog.html
+++ b/source/catalog.html
@@ -66,9 +66,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--1">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="./img/photo-1-tablet.jpg">
-              <img src="./img/photo-1-mobile@1x.jpg" alt="Фото дороги во время заката солнца на фоне гор">
+              <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.jpg 1x, ./img/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/photo-1-tablet.jpg 1x, ./img/photo-1-tablet@2x.jpg 2x">
+              <img src="./img/photo-1-mobile.jpg" srcset="./img/photo-1-mobile@2x.jpg 2x" alt="Фото дороги во время заката солнца на фоне гор">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -89,9 +89,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--2">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="./img/photo-2-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="./img/photo-2-tablet.jpg">
-              <img src="./img/photo-2-mobile@1x.jpg" alt="Фото цветущего кактуса на фоне гор">
+              <source media="(min-width: 1200px)" srcset="./img/photo-2-desktop.jpg 1x, ./img/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/photo-2-tablet.jpg 1x, ./img/photo-2-tablet@2x.jpg 2x">
+              <img src="./img/photo-2-mobile.jpg" srcset="./img/photo-2-mobile@2x.jpg 2x" alt="Фото цветущего кактуса на фоне гор">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -112,9 +112,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--3">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="./img/photo-3-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="./img/photo-3-tablet.jpg">
-              <img class="gallery-list__photo" src="./img/photo-3-mobile@1x.jpg" alt="Фото горного серпантина">
+              <source media="(min-width: 1200px)" srcset="./img/photo-3-desktop.jpg 1x, ./img/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/photo-3-tablet.jpg 1x, ./img/photo-3-tablet@2x.jpg 2x">
+              <img class="gallery-list__photo" src="./img/photo-3-mobile.jpg" srcset="./img/photo-3-mobile@2x.jpg 2x" alt="Фото горного серпантина">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -135,9 +135,9 @@
           </div>
           <div class="gallery-list__item gallery-list__item--4">
             <picture class="gallery-list__photo">
-              <source media="(min-width: 1200px)" srcset="./img/photo-4-desktop.jpg">
-              <source media="(min-width: 768px)" srcset="./img/photo-4-tablet.jpg">
-              <img class="gallery-list__photo" src="./img/photo-4-mobile@1x.jpg" alt="Каньон">
+              <source media="(min-width: 1200px)" srcset="./img/photo-4-desktop.jpg 1x, ./img/photo-4-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/photo-4-tablet.jpg 1x, ./img/photo-4-tablet@2x.jpg 2x">
+              <img class="gallery-list__photo" src="./img/photo-4-mobile.jpg" srcset="./img/photo-4-mobile@2x.jpg 2x" alt="Каньон">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -163,10 +163,13 @@
           <div class="presentation__wrapper">
             <b class="presentation__text">Все еще сомневаетесь?</b>
             <p class="presentation__description">Смотрите видеопрезентацию и<br> скорее за билетами, пока они<br> не<br> подорожали в очередной раз!</p>
+            <div  class="presentation__container">
             <video class="presentation__video-image" width="280" height="177" poster="video-mobile@1x.png" title="Машины едущие по дороге ведущий на мост, вокруг горы">
               <source src="#" type="video/mp4">
               <source src="#" type="video/ogg">
             </video>
+            <div class="presentation__icon-play"></div>
+            </div>
           </div>
         </section>
       </main>
