--- a/source/catalog.html
+++ b/source/catalog.html
@@ -68,7 +68,7 @@
             <picture class="gallery-list__photo">
               <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.jpg 1x, ./img/photo-1-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-1-tablet.jpg 1x, ./img/photo-1-tablet@2x.jpg 2x">
-              <img src="./img/photo-1-mobile.jpg" srcset="./img/photo-1-mobile@2x.jpg 2x" alt="Фото дороги во время заката солнца на фоне гор">
+              <img src="./img/photo-1-mobile.jpg" srcset="./img/photo-1-mobile@2x.jpg 2x" width="280" height="280" alt="Фото дороги во время заката солнца на фоне гор">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -91,7 +91,7 @@
             <picture class="gallery-list__photo">
               <source media="(min-width: 1200px)" srcset="./img/photo-2-desktop.jpg 1x, ./img/photo-2-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-2-tablet.jpg 1x, ./img/photo-2-tablet@2x.jpg 2x">
-              <img src="./img/photo-2-mobile.jpg" srcset="./img/photo-2-mobile@2x.jpg 2x" alt="Фото цветущего кактуса на фоне гор">
+              <img src="./img/photo-2-mobile.jpg" srcset="./img/photo-2-mobile@2x.jpg 2x" width="280" height="280" alt="Фото цветущего кактуса на фоне гор">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -114,7 +114,7 @@
             <picture class="gallery-list__photo">
               <source media="(min-width: 1200px)" srcset="./img/photo-3-desktop.jpg 1x, ./img/photo-3-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-3-tablet.jpg 1x, ./img/photo-3-tablet@2x.jpg 2x">
-              <img class="gallery-list__photo" src="./img/photo-3-mobile.jpg" srcset="./img/photo-3-mobile@2x.jpg 2x" alt="Фото горного серпантина">
+              <img class="gallery-list__photo" src="./img/photo-3-mobile.jpg" srcset="./img/photo-3-mobile@2x.jpg 2x" width="280" height="280" alt="Фото горного серпантина">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
@@ -137,7 +137,7 @@
             <picture class="gallery-list__photo">
               <source media="(min-width: 1200px)" srcset="./img/photo-4-desktop.jpg 1x, ./img/photo-4-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="./img/photo-4-tablet.jpg 1x, ./img/photo-4-tablet@2x.jpg 2x">
-              <img class="gallery-list__photo" src="./img/photo-4-mobile.jpg" srcset="./img/photo-4-mobile@2x.jpg 2x" alt="Каньон">
+              <img class="gallery-list__photo" src="./img/photo-4-mobile.jpg" srcset="./img/photo-4-mobile@2x.jpg 2x" width="280" height="280" alt="Каньон">
             </picture>
             <div class="gallery-list__wrapper gallery-list__wrapper--gray">
               <div class="gallery-list__wrapper-description">
