--- a/source/form.html
+++ b/source/form.html
@@ -206,7 +206,7 @@
     <div class="modal-failure modal-failure--close">
       <section class="modal-failure__section">
         <h3 class="visually-hidden">Форма не сработала</h3>
-        <p class="modal-failure__text">Что-то пошло не так!</p>
+        <p class="modal-failure__text">Что-то пошло<br> не так!</p>
         <p class="modal-failure__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
         <button class="button modal-failure__button" type="button">Ок</button>
       </section>
