--- a/source/catalog.html
+++ b/source/catalog.html
@@ -62,7 +62,7 @@
         <section class="gallery-list">
           <div class="gallery-list__header">
             <h2 class="gallery-list__title">Фото и видео</h2>
-            <p class="gallery-list__description">Не можете решиться на путешествие<br> из-за курса?<br> Фотографии помогут вам<br> забыть о политике и экономике.</p>
+            <p class="gallery-list__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
           </div>
           <div class="gallery-list__item gallery-list__item--1">
             <a href="#">
@@ -170,7 +170,7 @@
           <h2 class="visually-hidden">Видеопрезентация Седоны</h2>
           <div class="presentation__wrapper">
             <b class="presentation__text">Все еще сомневаетесь?</b>
-            <p class="presentation__description">Смотрите видеопрезентацию и<br> скорее за билетами, пока они<br> не<br> подорожали в очередной раз!</p>
+            <p class="presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
             <div  class="presentation__container">
             <video class="presentation__video-image" width="280" height="177" poster="video-mobile@1x.png" title="Машины едущие по дороге ведущий на мост, вокруг горы">
               <source src="#" type="video/mp4">
