--- a/source/catalog.html
+++ b/source/catalog.html
@@ -194,7 +194,7 @@
               <source src="#" type="video/mp4">
               <source src="#" type="video/ogg">
             </video>
-            <div class="presentation__icon-play" type="button"></div>
+            <div class="presentation__icon-play"></div>
             </div>
           </div>
         </section>
