--- a/source/catalog.html
+++ b/source/catalog.html
@@ -190,7 +190,7 @@
             <b class="presentation__text">Все еще сомневаетесь?</b>
             <p class="presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
             <div  class="presentation__container">
-            <video class="presentation__video-image" width="280" height="177" poster="./img/bg-video-mobile.jpg" title="Машины едущие по дороге ведущий на мост, вокруг горы">
+            <video class="presentation__video-image" width="280" height="177" title="Машины едущие по дороге ведущий на мост, вокруг горы">
               <source src="#" type="video/mp4">
               <source src="#" type="video/ogg">
             </video>
